--- a/apps/sinlessgames-ui/src/app/global.scss
+++ b/apps/sinlessgames-ui/src/app/global.scss
@@ -1,28 +1,23 @@
+@import url('https://fonts.googleapis.com/css2?family=Italianno&family=Philosopher:ital,wght@0,400;0,700;1,400;1,700&display=swap');
 
-/* Hide scrollbar by default */
+/* width */
 ::-webkit-scrollbar {
-    display: none;
+  width: 5px;
+  background-color: rgba(0, 0, 0, 0);
 }
-  
-/* Show scrollbar on hover */
-::-webkit-scrollbar-thumb:hover {
-    display: block;
-}
-  
+
 /* Track */
 ::-webkit-scrollbar-track {
-    background-color: rgba(0, 0, 0, 0.75);
-    border-radius: 10px;
+  background: rgba(0, 0, 0, 0);
 }
-  
+
 /* Handle */
 ::-webkit-scrollbar-thumb {
-    background-color: #daa520;
-    border-radius: 10px;
-    display: none; /* Hide by default */
+  background: rgba(218, 165, 32, 0);
+  border-radius: 5px;
 }
-  
-  /* Handle on hover */
+
+/* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
-    background-color: #DAA520; /* Thumb color */
+  background: rgba(218, 165, 32, 0.8);
 }
